# god.goals.glory

./: .gitignore  BeingThatGuy.service  Dockerfile  LICENSE  README.md  db.sqlite3  god_goals.service  gunicorn.conf.py  main.py  manage.py  pyproject.toml  req.txt  requirements.txt  requrements.txt  tick.py
.github/workflows/: deploy.yml
god_goals/: asgi.py  settings.py  urls.py  wsgi.py
junk/: actions copy.html  actions_form copy.html  besa copy.html  cart copy.html  checkout copy.html  homepage copy.html  jlsa.j  land copy 2.html  land copy.html  login copy.html  products_list copy.html  register copy.html  shop copy 2.html  shop copy.html  staff_dashboard copy.html  template_form copy.html  template_list copy.html
myenv/: pyvenv.cfg
staff/: admin.py  forms.py  models.py  test_views.py  tests.py  urls.py  views copy.py  views.py
staff/migrations/: 0001_initial.py  0002_review.py  0003_remove_review_rating_rating.py  0004_product_image_2_product_image_3_product_image_4.py  0005_testimonial.py  0006_remove_testimonial_stars.py  0007_product_size_l_product_size_m_product_size_s_and_more.py  0008_order_orderitem.py  0009_remove_order_sizes_orderitem_sizes.py  0010_waitlistemailtemplate_waitlistuser_and_more.py  0011_waitlistuser_tel1.py  0012_order_address_order_payment_method_order_stage.py  0013_product_created_at.py
static/css/: actions_form.css  activities.css  admin.css  base.css  cart.css  contact_info.css  dependents.css  form.css  (+14 more)
yuzzaz/: admin.py  apps.py  forms.py  models.py  test_views.py  tests.py  tokens.py  urls.py  views copy.py  views.py
(+77 files in other folders)
